<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ZpomalenyPohybActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/zpomaleny_pohyb_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/activity_toolbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/pohyb_activity_pocatecni_rychlost"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                />
            <SeekBar
                android:id="@+id/zpomaleny_pohyb_activity_seek_bar_rychlost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4.6"
                android:max="200"
                android:progress="0"
                />
            <TextView
                android:id="@+id/zpomaleny_pohyb_activity_text_view_rychlost_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="0"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/pohyb_activity_zrychleni"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                />
            <SeekBar
                android:id="@+id/zpomaleny_pohyb_activity_seek_bar_zrychleni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4.6"
                android:max="120"
                android:progress="0"
                />
            <TextView
                android:id="@+id/zpomaleny_pohyb_activity_text_view_zrychleni_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="0"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
        <Button
            android:id="@+id/zpomaleny_pohyb_activity_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/pohyb_activity_start_button"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <eu.honzaik.fyzikaproandroid.other.CustomLineChart
                android:id="@+id/zpomaleny_pohyb_activity_chart_rychlost"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pohyb_activity_chart_height"
                android:layout_weight="1"/>

            <eu.honzaik.fyzikaproandroid.other.CustomLineChart
                android:id="@+id/zpomaleny_pohyb_activity_chart_draha"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pohyb_activity_chart_height"
                android:layout_weight="1"/>

            <eu.honzaik.fyzikaproandroid.other.CustomLineChart
                android:id="@+id/zpomaleny_pohyb_activity_chart_zrychleni"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pohyb_activity_chart_height"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
